Playing around with grids

--- a/cssLayout/simpleGridGallery.html
+++ b/cssLayout/simpleGridGallery.html
@@ -9,26 +9,27 @@
 </head>
 
 <body>
-    <section>
-        <p>Demo of rapid and responsive layout using CSS grid</p>
+    <section class="simpleGrid">
+        <h2>Demo of rapid and responsive layout using CSS grid</h2> 
+        <ul>
+            <li><img src="0.jpg" alt="zero" /> </li>
+            <li><img src="1.jpg" alt="one" /> </li>
+            <li><img src="2.jpg" alt="two" /> </li>
+            <li><img src="3.jpg" alt="three" /> </li>
+            <li><img src="4.jpg" alt="four" /> </li>
+            <li><img src="5.jpg" alt="five" /> </li>
+            <li><img src="6.jpg" alt="six" /> </li>
+            <li><img src="7.jpg" alt="seven" /> </li>
+            <li><img src="8.jpg" alt="eight" /> </li>
+            <li><img src="9.jpg" alt="nine" /> </li>
+            <li><img src="10.jpg" alt="ten" /> </li>
+            <li><img src="11.jpg" alt="eleven" /> </li>
+            <li><img src="12.jpg" alt="twelve" /> </li>
+            <li><img src="13.jpg" alt="thirteen" /> </li>
+            <li><img src="14.jpg" alt="fourteen" /> </li>
+            <li><img src="15.jpg" alt="fifteen" /> </li>
+        </ul>
     </section>
-    <ul class="pics">
-        <li><img src="0.jpg" alt="zero" /> </li>
-        <li><img src="1.jpg" alt="one" /> </li>
-        <li><img src="2.jpg" alt="two" /> </li>
-        <li><img src="3.jpg" alt="three" /> </li>
-        <li><img src="4.jpg" alt="four" /> </li>
-        <li><img src="5.jpg" alt="five" /> </li>
-        <li><img src="6.jpg" alt="six" /> </li>
-        <li><img src="7.jpg" alt="seven" /> </li>
-        <li><img src="8.jpg" alt="eight" /> </li>
-        <li><img src="9.jpg" alt="nine" /> </li>
-        <li><img src="10.jpg" alt="ten" /> </li>
-        <li><img src="11.jpg" alt="eleven" /> </li>
-        <li><img src="12.jpg" alt="twelve" /> </li>
-        <li><img src="13.jpg" alt="thirteen" /> </li>
-        <li><img src="14.jpg" alt="fourteen" /> </li>
-        <li><img src="15.jpg" alt="fifteen" /> </li>
-    </ul>
+   
 </body>
 </html>
