--- a/javascript/designPatterns/index.html
+++ b/javascript/designPatterns/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
-<body>
+<body id="b">
     
     <button id="playButton">Sample</button>
     <script src="play.js"></script>
