--- a/javascript/learnCode.academy_youTube/jquery/index.html
+++ b/javascript/learnCode.academy_youTube/jquery/index.html
@@ -11,16 +11,24 @@
 
 <body>
 
-    <div class="col-xs-3">
-        <button class="b1">Simple button</button>
-        <div id="panel4" class="panel panel-primary">
-            <div class="panel-heading"></div>
-            <div class="panel-body"></div>
-        </div>
-    </div>
+
+    <ul class="list">
+        <li>one</li>
+        <li class="special">two</li>
+        <li>three</li>
+            <li>
+                <ul class="sublist">
+                    <li>1</li>
+                    <li>2</li>
+                    <li>3</li>
+                </ul>
+            </li>
+    </ul>
+
+
 
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="jQueryPlay.js"></script>
+    <script src="lesson4.js"></script>
 
     <!-- <script>
         $(function () {
