--- a/javascript/learnWebCode_youTube/handlebars/index.html
+++ b/javascript/learnWebCode_youTube/handlebars/index.html
@@ -27,6 +27,8 @@
                     <span class="species">({{species}})</span>
                 </h2>
 
+                <p>Age: {{calculateAge birthYear}}</p>
+
                 {{#if favFoods}}
                 <h4 class="headline-bar">Favorite Foods</h4>
                 <ul class="favorite-foods">
