YouTube - Drew Ryan (Flat Responsive Website)
- will pause on this for now

--- a/javascript/drewRyan_YouTube/flatResponsiveWebsite/mine/index.html
+++ b/javascript/drewRyan_YouTube/flatResponsiveWebsite/mine/index.html
@@ -5,10 +5,79 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./css/font-awesome.min.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="shortcut icon" href="./img/favicon.png" type="image/png">
     <title>Responsive Design</title>
 </head>
 
 <body>
+
+    <header>
+        <div id="header-inner">
+            <a href="index.html" id="logo"></a>
+            <nav>
+                <a href="#" id="menu-icon"></a>
+                <ul>
+                    <li>
+                        <a href="index.html" class="current">Home</a>
+                    </li>
+                    <li>
+                        <a href="#">Skills</a>
+                    </li>
+                    <li>
+                        <a href="#">Portfolio</a>
+                    </li>
+                    <li>
+                        <a href="#">Our Team</a>
+                    </li>
+                    <li>
+                        <a href="#">Contact</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <!--end header-->
+
+    <section class="banner">
+        <div class="banner-inner">
+            <img src="./img/rocket_design.png" alt="Rocket Desing">
+        </div>
+    </section>
+    <!--end banner-->
+
+    <section id="html" class="one-fourth">
+        <td>
+            <i class="fa fa-html5"></i>
+        </td>
+        <h3>HTML</h3>
+    </section>
+
+    <section id="css" class="one-fourth">
+        <td>
+            <i class="fa fa-html5"></i>
+        </td>
+        <h3>CSS</h3>
+    </section>
+
+    <section id="seo" class="one-fourth">
+        <td>
+            <i class="fa fa-search"></i>
+        </td>
+        <h3>SEO</h3>
+    </section>
+
+    <section id="social" class="one-fourth">
+        <td>
+            <i class="fa fa-users"></i>
+        </td>
+        <h3>SOCIAL</h3>
+    </section>
+    <!--end four column section-->
+
+
+    
 
 </body>
 
