--- a/node/traversyMedia_youTube/nodejs_for_absolute_beginners/index.html
+++ b/node/traversyMedia_youTube/nodejs_for_absolute_beginners/index.html
@@ -5,12 +5,11 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Document</title>
+        <title>Sample</title>
     </head>
 
     <body>
-
-        <script src="6_subclasses.js"></script>
+        <p>Html file read</p>
     </body>
 
 </html>
